Fix des collapse sur la version desktop et mobile
Host icon version mobile

--- a/src/styles/logementsdetails.scss
+++ b/src/styles/logementsdetails.scss
@@ -126,6 +126,8 @@
     flex-direction: row; /* Afficher les collapses en ligne */
     justify-content: space-between;
     align-items: baseline;
+    gap: 70px;
+
   }
 
   .collapse-logement .collapse-container {
@@ -134,6 +136,7 @@
     width: 100%;
     .collapse {
       border-radius: 15px;
+      width: 94%;
     }
   }
 
@@ -160,14 +163,11 @@
     }  
     .collapse-logement {
       flex-direction: column; /* Afficher les collapses en ligne */
+      gap: 0px;
+
     }
     .information {
-      .host-icon-mobile {
-        width: 64px;
-        height: 64px;
-        border-radius: 50%;
-        background-color: #C4C4C4;
-      }
+   
       .host-logement {
           flex-direction: column;  
           align-items: flex-start; /* Aligner les éléments sur la gauche */
@@ -185,10 +185,18 @@
           display: flex;
           align-items: center;
           justify-content: space-between;
+          gap: 35px;
           .host-name-mobile {
+            margin-left: 50px;
             color: #FF6060;
             font-weight: 500;
             display: flex;
+          }
+          .host-icon-mobile {
+            width: 64px;
+            height: 64px;
+            border-radius: 50%;
+            background-color: #C4C4C4;
           }
         }
     }
